2010-09-21  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/Makefile.am: Add new header files.

	* include/generator/DynGridTopoGenerator.h: New file.
	* include/generator/DynRakeTopoGenerator.h: Likewise.
	* include/generator/DynRandomTopoGenerator.h: Likewise.
	* include/generator/DynTopologyGenerator.h: Likewise.
	* src/dynGen.cpp: Likewise.

2010-09-20  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/staticGen.cpp: Add new topologies.

	* include/generator/OptTopologyGenerator.h: Fix some warnings.
	* include/generator/TopologyGenerator.h: Likewise.

	* include/generator/ContextGenerator.h: Remove uneccessary
	parameters.
	* src/ContextGenerator.cpp: Likewise.

	* include/Makefile.am: Add new header files for new topologies.

	* include/generator/BinaryTreeTopoGenerator.h: New file.
	* include/generator/MultipleRingTopoGenerator.h: Likewise.
	* include/generator/MultipleRingOptTopoGenerator.h: Likewise.
	* include/generator/HouseOptTopoGenerator.h: Likewise.

2010-09-17  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/generator/RingEdgeTopoGenerator.h: New file.
	* include/generator/RingTopoGenerator.h: Likewise.
	* include/generator/RingOptTopoGenerator.h: Likewise.
	* include/generator/HouseTopoGenerator.h: Likewise.

	* include/Makefile.am: Add new header files.

	* src/staticGen.cpp: Add new topologies.

2010-09-17  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/generator/OptTopologyGenerator.h: Separate
	OptTopoGenerator from TopoGenerator.
	* include/generator/DiamondZigZagOptTopoGenerator.h: Likewise.
	* include/generator/DiamondOptTopoGenerator.h: Likewise.
	* src/staticGen.cpp: Likewise.

	* include/generator/DiamondTopoGenerator.h: Typo.

2010-09-17  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/generator/TopologyGenerator.h: Rename
	ZIGZAG_DIAMOND_TOPOLOGY to DIAMOND_ZIGZAG_TOPOLOGY.
	* src/staticGen.cpp: Likewise.

	* include/generator/DiamondZigZagOptTopoGenerator.h: Remove edges
	when optimizing the topology.
