@@ -1,3 +1,7 @@
+2010-10-14  Minh Dao Tran  <dao@kr.tuwien.ac.at>
+
+	* src/dynGen.cpp: Add killall dmcsd at the beginning of the shell script.
+
 2010-09-21  Minh Dao Tran  <dao@kr.tuwien.ac.at>
 
 	* include/Makefile.am: Add new header files.
